add ❌ and ⭕ to 'after' function, as well as title.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,12 @@
 .grid:nth-last-of-type(-n + 3) {
     border-bottom: none;
 }
+
+.x::after{
+    content: ❌;
+}
+
+.o::after{
+    content: ⭕;
+}
+
