--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@
     width: 50px;
     height: 50px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 28px;
 }
 
 .grid:nth-child(-n + 3) {
@@ -30,11 +34,41 @@
     border-bottom: none;
 }
 
-.x::after{
+.x ::after{
     content: ❌;
 }
 
-.o::after{
+.o ::after{
     content: ⭕;
 }
 
+.disabled{
+    cursor: not-allowed;
+}
+
+.grid:not(.disabled):hover{
+    background: #eee;
+}
+
+.game-over{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: rgb(0,0,0 / 50%) 0 0 0 9999px;
+}
+
+.go-text{
+    position: absolute;
+    top: -200px;
+    font-size: 60px;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
+    transform: translate(-30%);
+}
+
+.visible{
+    display: block;
+}
