add what happens if X or O gets three in a row

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@
     box-shadow: rgb(0 0 0 / 50%) 0 0 0 9999px;
 }
 
-.go-text {
+.go-txt {
     position: absolute;
     top: -200px;
     font-size: 60px;
